--- a/project.config.json
+++ b/project.config.json
@@ -10,7 +10,7 @@
 		"enhance": true
 	},
 	"appid": "wx2e2ae559f314e176",
-	"projectname": "hi-face",
+	"projectname": "%E5%AE%9E%E4%BE%8B",
 	"libVersion": "2.8.1",
 	"simulatorType": "wechat",
 	"simulatorPluginLibVersion": {},
@@ -30,15 +30,13 @@
 		"game": {
 			"list": []
 		},
+		"gamePlugin": {
+			"current": -1,
+			"list": []
+		},
 		"miniprogram": {
-			"current": 0,
-			"list": [
-				{
-					"id": -1,
-					"name": "db guide",
-					"pathName": "pages/databaseGuide/databaseGuide"
-				}
-			]
+			"current": -1,
+			"list": []
 		}
 	}
 }
