--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -1,7 +1,8 @@
 {
   "pages": [
     "pages/index/index",
-    "pages/storageConsole/storageConsole"
+    "pages/storageConsole/storageConsole",
+    "pages/imgLabel/imgLabel"
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
@@ -10,6 +11,5 @@
     "navigationBarTitleText": "云开发 QuickStart",
     "navigationBarTextStyle": "black"
   },
-  "sitemapLocation": "sitemap.json",
-  "style": "v2"
+  "sitemapLocation": "sitemap.json"
 }
