--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -2,7 +2,8 @@
   "pages": [
     "pages/index/index",
     "pages/storageConsole/storageConsole",
-    "pages/imgLabel/imgLabel"
+    "pages/imgLabel/imgLabel",
+    "pages/imgFace/imgFace"
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
